--- a/bkk.css
+++ b/bkk.css
@@ -324,8 +324,8 @@ a.hover:hover {
   padding-top: 15px;
   padding-bottom: 8px;
   margin-top: 0px;
-  width:  425px;
-  min-height: 425px;
+  width:  auto;
+/*  min-height: 425px;*/
   /*border: #34daff 1px solid; */
   box-shadow: 0 1px 8px 0 #34daff3d, 0 1px 8px 0 #34daff3d;
   display: none;
@@ -499,6 +499,7 @@ button.day{
 
 .bkkAll {
   display: flex;
+  flex-direction: column;
 }
 
 
