--- a/bkk.css
+++ b/bkk.css
@@ -324,7 +324,7 @@ a.hover:hover {
   padding-top: 15px;
   padding-bottom: 8px;
   margin-top: 0px;
-  width:  auto;
+  width:  100%;
 /*  min-height: 425px;*/
   /*border: #34daff 1px solid; */
   box-shadow: 0 1px 8px 0 #34daff3d, 0 1px 8px 0 #34daff3d;
